--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,3 +9,10 @@
 }
 
 
+@media screen and (min-width: 1240px) {
+   .profile-container{
+    zoom: 1.3;
+    margin-left: 184px !important;
+   }
+}
+    
