--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,8 +11,13 @@
 
 @media screen and (min-width: 1240px) {
    .profile-container{
-    zoom: 1.3;
-    margin-left: 184px !important;
+    zoom: 1.5;
+   }
+}
+
+@media screen and (min-width: 360px) {
+   .connection-card{
+    zoom: 1.5;
    }
 }
     
